Fixed bug, improved readability
Version 2.0 public beta 4.9.1
Fixed Clipchamp img
Changed background to improve readability.
Removed some shadows.
Added blur to programm info

--- a/sass/components/_ai.scss
+++ b/sass/components/_ai.scss
@@ -23,7 +23,7 @@
 }
 
 .open-chat-btn:hover {
-    background-color: #dddddd2e;
+    background-color: rgb( 214, 232, 243);
 }
 
 .go {
