--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -12,60 +12,3 @@ background-size: cover;
    transition: 0.3s;
    font-family: 'Roboto', Arial, sans-serif;
 }
-
-p{
-     text-shadow: white 1px 0 10px;
-}
-
-// Определяем переменные для тем
-
-
-
-// .light-theme {
-// background: linear-gradient(to bottom, #cfecff, #ffffff);
-// color: #000000;
-// }
-// // Темная тема
-
-
-// .dark-theme {
-//     background:linear-gradient(to bottom, #001769, #000000);
-//     color: white;
-
-//     .mailto{
-//          color: white;
-//     }
-
-//     .footer-link{
-//       color: white;
-//  }
-
-//  .logow {
-//       color: white;
-//  }
-
-//  .backdropload{
-//    background-color: rgba(8, 76, 127, 0.061);
-//    border: rgba(0, 145, 255, 0.061) 1px solid;
-//  }
-
-//  .card-title{
-//    color: white;
-//  }
-
-//  .list-title{
-//    color: white;
-//  }
-// }
-
-
-// .dark-mode {
-//    background-color: #121212;
-//    color: #ffffff;
-// }
-
-// .light-mode {
-//    background-color: #ffffff;
-//    color: #000000;
-
-// }
