--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,25 +7,20 @@ footer {
     padding: 10px 10px;
     display: flex;
     margin-top: 15px;
-    background: linear-gradient(to top, #cfecff38, #ffffff00);
 }
 
 .footer-item {
     color: black;
-    text-shadow: white 1px 0 10px;
 }
 
 .mailto {
     color: black;
     text-decoration: none;
-    text-shadow: white 1px 0 10px;
 }
 
 .footer-link {
     color: black;
     text-decoration: none;
-    text-shadow: white 1px 0 10px;
-    text-shadow: white 1px 0 10px;
 }
 
 .footer-wrapper {
