--- a/sass/main.css
+++ b/sass/main.css
@@ -7,10 +7,6 @@ body {
   font-family: "Roboto", Arial, sans-serif;
 }
 
-p {
-  text-shadow: white 1px 0 10px;
-}
-
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -317,8 +313,6 @@ p {
   border-radius: 10px;
   align-items: center;
   z-index: 200;
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
 }
 
 .slides {
@@ -367,8 +361,8 @@ button.next {
   top: 50%;
   transform: translateY(-50%);
   background: rgba(51, 51, 51, 0);
-  color: white;
-  border: white 1px solid;
+  color: rgb(0, 0, 0);
+  border: rgb(0, 0, 0) 1px solid;
   border-radius: 50px;
   padding: 50px 10px;
   padding: 10px;
@@ -376,7 +370,7 @@ button.next {
   transition: background-color 0.1s ease-in-out;
 }
 .button-unifide:hover {
-  background-color: rgba(255, 255, 255, 0.4352941176);
+  background-color: rgba(0, 0, 0, 0.4352941176);
 }
 
 .slide-img {
@@ -894,25 +888,20 @@ footer {
   padding: 10px 10px;
   display: flex;
   margin-top: 15px;
-  background: linear-gradient(to top, rgba(207, 236, 255, 0.2196078431), rgba(255, 255, 255, 0));
 }
 
 .footer-item {
   color: black;
-  text-shadow: white 1px 0 10px;
 }
 
 .mailto {
   color: black;
   text-decoration: none;
-  text-shadow: white 1px 0 10px;
 }
 
 .footer-link {
   color: black;
   text-decoration: none;
-  text-shadow: white 1px 0 10px;
-  text-shadow: white 1px 0 10px;
 }
 
 .footer-wrapper {
@@ -1059,6 +1048,8 @@ ul {
   border: rgba(0, 145, 255, 0.061) 1px solid;
   border-radius: 30px;
   padding: 10px 10px;
+  -webkit-backdrop-filter: blur(30px);
+          backdrop-filter: blur(30px);
 }
 
 .none {
@@ -1161,7 +1152,7 @@ h3 {
 }
 
 .open-chat-btn:hover {
-  background-color: rgba(221, 221, 221, 0.1803921569);
+  background-color: rgb(214, 232, 243);
 }
 
 .go {
